--- a/css/main.css
+++ b/css/main.css
@@ -8,7 +8,7 @@
  aside#social {
     background: lime;
     width: 200px;
-    height: auto;
+    height: auto;S
     position: fixed;
     top: 50px;
     right: 20px;
