--- a/css/main.css
+++ b/css/main.css
@@ -4,6 +4,7 @@
  *
  * Site Styles
  *****************************************************************************/
+/* Whole Page */
 
 * {
     font-family: 'Quicksand', sans-serif;
