--- a/css/main.css
+++ b/css/main.css
@@ -4,7 +4,7 @@
  *
  * Site Styles
  *****************************************************************************/
-/* Whole Page */
+/* Whole Page - commit test */
 
 * {
     font-family: 'Quicksand', sans-serif;
