--- a/css/main.css
+++ b/css/main.css
@@ -4,7 +4,7 @@
  *
  * Site Styles
  *****************************************************************************/
-/* Whole Page - commit test */
+/* Whole Page Styles */
 
 * {
     font-family: 'Quicksand', sans-serif;
@@ -46,7 +46,7 @@ nav ul li {
  
  header {
     height: 300px;
-    background: url(../img/monkaa_monkeyhang.jpg);
+    background: url(../img/monkaa_monkeyhang_rev.jpg);
     background-position: center center;
     background-repeat: no-repeat;
     background-size: cover;
