Final commit for 5/4/2018

--- a/css/main.css
+++ b/css/main.css
@@ -22,7 +22,7 @@ nav ul li {
 
 
  aside#social {
-    background: rgba(226,240,95,0.6);
+    background: rgba(226,240,95,0.5);
     width: 200px;
     height: auto;
     position: fixed;
@@ -32,17 +32,32 @@ nav ul li {
  }
  
  ul.social-links {
-     display: none;
+    display: none;
+    list-style-type: none;
  }
  
  aside#social:hover ul.social-links {
      display: block;
  }
  
+ .fa {
+    padding: 5px;
+    font-size: 30px;
+    width: 30px;
+    text-align: center;
+    text-decoration: none;
+}
+ 
  html {
     margin: 0;
     padding: 0;
  }
+ 
+p {
+    text-align: center;
+}
+ 
+ /* Header Section */
  
  header {
     height: 300px;
@@ -53,9 +68,16 @@ nav ul li {
     padding: 100px 20px 20px 20px;
  }
  
+ h1 {
+     font-size: 100px;
+     font-weight: bold;
+     margin-bottom: 25px;
+ }
 
  .subtitle {
      text-align: left;
+     padding-left: 20px;
+     font-weight: bold;
  }
  
 footer {
@@ -85,9 +107,6 @@ h3  {
     text-align: center;
 }
 
-p {
-    text-align: center;
-}
 
 /* About Section */
 
@@ -103,14 +122,13 @@ section#about {
 .image-weybec {
     width: 33.3%;
     float: left;
-    margin-bottom: 10px;
+    margin-bottom: 35px;
 }
 
 .headshot {
     width: 300px;
     border: white 10px solid;
 }
-
 
 /* Audio Section */
 
