--- a/css/main.css
+++ b/css/main.css
@@ -72,6 +72,7 @@ p {
      font-size: 100px;
      font-weight: bold;
      margin-bottom: 25px;
+     text-shadow: 1px 1px rgba(255,255,255,0.8);
  }
 
  .subtitle {
@@ -79,15 +80,6 @@ p {
      padding-left: 20px;
      font-weight: bold;
  }
- 
-footer {
-    background: url(../media/video/loop_poster.png);
-    background-size: stretch;
-}
-
-.main-nav-bottom {
-    text-align: center;
-}
 
 section {
     padding-top: 50px;
@@ -100,6 +92,7 @@ section {
 
 section#watch {
     background: #041C24;
+    /*background: #17414F;*/
     color: white
 }
 
@@ -118,6 +111,19 @@ h3  {
     color: white;
 }
 
+/* Audio Section */
+
+section#listen {
+    /*background: #17414F;*/
+    background: #041C24;
+    color: white;
+}
+
+audio {
+    display: block;
+    margin: 0 auto;
+}
+
 /* About Section */
 
 section#about {
@@ -125,33 +131,38 @@ section#about {
     color: white;
 }
 
+#about ul li {
+	display: inline-block;
+	padding-right: 100px;
+	padding-left: 100px;
+}
+
+#about img {
+	width: 250px;
+	height: auto;
+}
+
+.headshot {
+    border: 15px solid #5C5E5E;
+}
+
+.contact-us {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
 
 .lead {
     text-align: center;
     color: #DBC304;
 }
 
-
-.image-weybec {
-    width: 33.3%;
-    float: left;
-    margin-bottom: 35px;
+/* Footer */
+footer {
+    background: url(../media/video/loop_poster.png);
+    background-size: stretch;
 }
 
-.headshot {
-    width: 300px;
-    border: white 10px solid;
-}
-
-
-/* Audio Section */
-
-section#listen {
-    background: #3B474F;
-    color: white;
-}
-
-audio {
-    display: block;
-    margin: 0 auto;
+.main-nav-bottom {
+    text-align: center;
 }
